search rooms in region + dashboard

--- a/config/packages/bootstrap_menu.yaml
+++ b/config/packages/bootstrap_menu.yaml
@@ -5,3 +5,6 @@ bootstrap_menu:
         owner:
           label: 'Tasks'
           route: 'owner_index'
+        logout:
+          label: 'logout'
+          route: 'app_logout'
