--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,9 +35,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/comsult, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/owner, roles: ROLE_ADMIN }
+        - { path: ^/reservation, roles: ROLE_ADMIN }
+        - { path: ^/client, roles: ROLE_ADMIN }
         - { path: ^/region, roles: ROLE_ADMIN }
-        - { path: ^/room, roles: ROLE_ADMIN }
+        - { path: ^/room/show, roles: ROLE_USER}
         #- { path: ^/, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/backoffice, roles: ROLE_BACKOFFICE }
